src/test/deca/syntax/valid/lexer/read-int.deca
// Description:
//    Test valide du lexer.
//
// Resultats:
//    read int

{
    int a = readInt();
}
