src/test/deca/syntax/invalid/lexer/include.deca
// Description:
//    Test invalide du lexer.
//
// Resultats:
//    erreur ligne 7

#include
